--- a/local/src/webscrape_table/sample.html
+++ b/local/src/webscrape_table/sample.html
@@ -19,7 +19,7 @@
                     </style><span class="nobold">(or territory)</span>
                 </th>
                 <th rowspan="2">UN estimate<br />
-                    <link rel="mw-deduplicated-inline-style" href="mw-data:TemplateStyles:r886047488" /><span class="nobold">(2018)<sup id="cite_ref-UN_WPP_5-0" class="reference"><a href="#cite_note-UN_WPP-5">&#91;5&#93;</a></sup><sup id="cite_ref-UN_WPP_2019_6-0" class="reference"><a href="#cite_note-UN_WPP_2019-6">&#91;6&#93;</a></sup></span>
+                    <Link legacyBehavior rel="mw-deduplicated-inline-style" href="mw-data:TemplateStyles:r886047488" /><span class="nobold">(2018)<sup id="cite_ref-UN_WPP_5-0" class="reference"><a href="#cite_note-UN_WPP-5">&#91;5&#93;</a></sup><sup id="cite_ref-UN_WPP_2019_6-0" class="reference"><a href="#cite_note-UN_WPP_2019-6">&#91;6&#93;</a></sup></span>
                 </th>
                 <th colspan="2">National statistic
                 </th>
